--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
 .head,.body-Section{
 	text-align: center;
 }
+body{
+	background: url('image.jpg')fixed;
+	color: #581845;
+}
 
-
+h1{
+	color: white;
+}
 .table-Section{
 	margin-top: 20px;
 }
@@ -13,4 +19,5 @@ table, td {
     padding-left: 30px;
     padding-right: 30px;
     font-weight: bold;
+    color: white;
 }
